# Nummernschildgenerator

./: CMakeLists.txt  Nummerntafelerstellung.kdev4  README  Zeichen.txt  Zulassungsbezirke.txt  config.ini  main.cpp
.kdev4/: Nummerntafelerstellung.kdev4
